# VR

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  bar.bat  filetree.tree  install_slang.bat  main.cpp  r.bat  vcpkg.json
.github/workflows/: build-tests.yml  build-windows.yml
logs/: logs.css  logs.js
src/Graphics/: GraphicsManager.cpp  GraphicsManager.h
src/Graphics/APIs/: GraphicsAPI.h  MetalAPI.h  MetalAPI.mm  OpenGLAPI.cpp  OpenGLAPI.h  VulkanAPI.cpp  VulkanAPI.h
src/Graphics/Objects/: Material.cpp  Material.hpp  Model.cpp  Model.hpp  ObjectUtils.cpp  ObjectUtils.hpp
src/OpenXR/: OpenXRManager.cpp  OpenXRManager.h  XRUtils.cpp  XRUtils.hpp
src/SDL/: SDLManager.cpp  SDLManager.hpp
src/Utils/: ApplicationInfo.h  Logger.cpp  Logger.hpp  Utils.cpp  Utils.hpp
src/shaders/testshaders/: triangle.slang
